--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ compileJava {
 
 dependencies {
     testImplementation('org.junit.jupiter:junit-jupiter:5.6.0')
+    implementation 'org.jetbrains:annotations:15.0'
 }
 
 test {
